@@ -4,6 +4,7 @@ New features:
 A......... [ZBX-8459] made possible CORS AJAX requests for JSON API (Andrejs)
 
 Bug fixes:
+.......PS. [ZBX-8037] added informative log message about Zabbix not upgrading SQLite3 databases (Juris)
 ..F....... [ZBX-8425] fixed "Host status" widget displaying problematic host if one of its groups is set to hidden in dashboard filter (Ivo)
 
 --------------------------------------------------------------------------------
